service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
  - nodePort: 32000
    port: 80
    targetPort: 3000
  selector:
    app: helloworld
  type: NodePort
